@@ -7,6 +7,7 @@
 * Added unit test for RockMelt 0.9.58.494.
 * Added unit test for Opera 11.50.
 * Added unit test for Maxthon 3.0 (updated sniffing code).
+* Added unit test for Maxthon 2.0 on Windows Vista.
 * Added unit test for iPad running iOS 3.2.
 * Added unit test for iPhone running iOS 4.3.3.
 * Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
@@ -15,7 +16,9 @@
 * Added unit test for Flock 0.4 on Mac OS X (PPC).
 * Added unit test for Flock 2.5.6 on Linux (x86-64).
 * Added unit test for Flock 3.5.3 on Mac OS X 10.6.6.
+* Improved unit test for Blackberry 9800.
 * Slightly changed Safari detection code.
+* Slightly improved Blackberry detection code.
 
 
 --- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------
